--- a/music-app/music-app/Controllers/Cells/TableViewCells/ArtistSection/ArtistInfoCell/ArtistInfoCell.xib
+++ b/music-app/music-app/Controllers/Cells/TableViewCells/ArtistSection/ArtistInfoCell/ArtistInfoCell.xib
@@ -17,7 +17,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="O2Z-L1-8Ec">
-                        <rect key="frame" x="10" y="0.0" width="300" height="100"/>
+                        <rect key="frame" x="10" y="10" width="300" height="100"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f7T-78-f4D">
                                 <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
@@ -39,7 +39,7 @@
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="O2Z-L1-8Ec" secondAttribute="bottom" constant="10" id="8id-wH-4F6"/>
                     <constraint firstItem="O2Z-L1-8Ec" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="AEJ-GH-VGC"/>
-                    <constraint firstItem="O2Z-L1-8Ec" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="EoJ-fw-jjd"/>
+                    <constraint firstItem="O2Z-L1-8Ec" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="EoJ-fw-jjd"/>
                     <constraint firstAttribute="trailing" secondItem="O2Z-L1-8Ec" secondAttribute="trailing" constant="10" id="fdt-5Q-a8N"/>
                 </constraints>
             </tableViewCellContentView>
