--- a/music-app/music-app/Controllers/Cells/TableViewCells/LibrarySection/LibraryArtistCell/LibraryArtistCell.xib
+++ b/music-app/music-app/Controllers/Cells/TableViewCells/LibrarySection/LibraryArtistCell/LibraryArtistCell.xib
@@ -35,9 +35,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="udq-iH-eoT">
-                                <rect key="frame" x="111" y="10.666666666666671" width="189" height="50"/>
+                                <rect key="frame" x="110.99999999999999" y="10.666666666666671" width="158.66666666666663" height="50"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="cxX-f7-60l">
+                                <rect key="frame" x="279.66666666666669" y="27.333333333333339" width="20.333333333333314" height="16.666666666666661"/>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="cxX-f7-60l" secondAttribute="height" multiplier="1:1" id="uwz-0L-Gx8"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                     </stackView>
                 </subviews>
@@ -57,6 +64,10 @@
         </tableViewCell>
     </objects>
     <resources>
+        <image name="chevron.right" catalog="system" width="97" height="128"/>
+        <systemColor name="labelColor">
+            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
