--- a/music-app/music-app/Controllers/Cells/TableViewCells/AlbumSection/AlbumInfoCell/AlbumInfoCell.xib
+++ b/music-app/music-app/Controllers/Cells/TableViewCells/AlbumSection/AlbumInfoCell/AlbumInfoCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="346" id="KGk-i7-Jjw" customClass="AlbumInfoCell" customModule="music_app" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="531" height="346"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="403" id="KGk-i7-Jjw" customClass="AlbumInfoCell" customModule="music_app" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="531" height="403"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="531" height="346"/>
+                <rect key="frame" x="0.0" y="0.0" width="531" height="403"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="c9i-yY-3Sm">
-                        <rect key="frame" x="0.0" y="0.0" width="531" height="346"/>
+                        <rect key="frame" x="0.0" y="10" width="531" height="383"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x49-69-nRI">
                                 <rect key="frame" x="0.0" y="0.0" width="531" height="250"/>
@@ -53,23 +53,25 @@
                                     <constraint firstAttribute="height" constant="10" id="mcx-rj-5A0"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aod-xS-bWO">
-                                <rect key="frame" x="0.0" y="260" width="531" height="20.333333333333314"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aod-xS-bWO">
+                                <rect key="frame" x="0.0" y="260" width="531" height="25.333333333333314"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbj-9s-cu4">
-                                <rect key="frame" x="0.0" y="280.33333333333331" width="531" height="6.3333333333333144"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbj-9s-cu4">
+                                <rect key="frame" x="0.0" y="285.33333333333331" width="531" height="38.333333333333314"/>
                                 <color key="tintColor" systemColor="systemPurpleColor"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Artist"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Artist">
+                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <action selector="artistButtonDidTap:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Uek-bm-A2S"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rgk-mo-Sfr">
-                                <rect key="frame" x="0.0" y="286.66666666666669" width="531" height="15"/>
+                                <rect key="frame" x="0.0" y="323.66666666666669" width="531" height="15"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TZG-MK-47R">
                                         <rect key="frame" x="0.0" y="0.0" width="223" height="15"/>
@@ -78,7 +80,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="rZ4-t2-JgK">
                                         <rect key="frame" x="223" y="0.0" width="85" height="15"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Album info" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4R9-np-gOG">
+                                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Album info" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4R9-np-gOG">
                                                 <rect key="frame" x="0.0" y="0.0" width="65" height="15"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                 <nil key="textColor"/>
@@ -106,14 +108,14 @@
                                 </constraints>
                             </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yDM-Xt-AW8">
-                                <rect key="frame" x="0.0" y="301.66666666666669" width="531" height="10"/>
+                                <rect key="frame" x="0.0" y="338.66666666666669" width="531" height="10"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="10" id="l22-jh-LNY"/>
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="BVg-TQ-UHR">
-                                <rect key="frame" x="0.0" y="311.66666666666669" width="531" height="34.333333333333314"/>
+                                <rect key="frame" x="0.0" y="348.66666666666669" width="531" height="34.333333333333314"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XMO-Q9-ijp">
                                         <rect key="frame" x="0.0" y="0.0" width="260.66666666666669" height="34.333333333333336"/>
@@ -122,6 +124,9 @@
                                         <buttonConfiguration key="configuration" style="gray" title="Play" imagePadding="8">
                                             <imageReference key="image" image="play.fill" catalog="system" symbolScale="small"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="playButtonDidTap:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="KDT-pH-uT8"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UzF-1s-8vJ">
                                         <rect key="frame" x="270.66666666666674" y="0.0" width="260.33333333333326" height="34.333333333333336"/>
@@ -131,6 +136,9 @@
                                             <imageReference key="image" image="shuffle" catalog="system" symbolScale="small"/>
                                             <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="shuffleButtonDidTap:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="h4K-vR-RUc"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -138,9 +146,9 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="c9i-yY-3Sm" secondAttribute="bottom" id="C4Z-He-gPL"/>
+                    <constraint firstAttribute="bottom" secondItem="c9i-yY-3Sm" secondAttribute="bottom" constant="10" id="C4Z-He-gPL"/>
                     <constraint firstAttribute="trailing" secondItem="c9i-yY-3Sm" secondAttribute="trailing" id="DHb-ag-6lS"/>
-                    <constraint firstItem="c9i-yY-3Sm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Zx6-Ov-26L"/>
+                    <constraint firstItem="c9i-yY-3Sm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="Zx6-Ov-26L"/>
                     <constraint firstItem="c9i-yY-3Sm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="oL8-21-xzW"/>
                 </constraints>
             </tableViewCellContentView>
@@ -154,7 +162,7 @@
                 <outlet property="shuffleButton" destination="UzF-1s-8vJ" id="fHv-Ck-bRQ"/>
                 <outlet property="titleLabel" destination="aod-xS-bWO" id="ihU-wf-jCZ"/>
             </connections>
-            <point key="canvasLocation" x="305" y="50"/>
+            <point key="canvasLocation" x="304.58015267175574" y="29.929577464788736"/>
         </tableViewCell>
     </objects>
     <resources>
